# haskell-eigen

./: .gitignore  LICENSE  README  README.md  compress  eigen-proxy.cpp  eigen-proxy.h  eigen.cabal  eigen.cabal.make  eigen.cabal.template  tags.txt
Data/Eigen/: Internal.hs  Internal.hsc  LA.hs  Matrix.hs  Parallel.hs  SparseLA.hs  SparseMatrix.hs
Data/Eigen/Matrix/: Mutable.hs
Data/Eigen/SparseMatrix/: Mutable.hs
cbits/: eigen-dense.cpp  eigen-dense.h  eigen-la.cpp  eigen-la.h  eigen-proxy.cpp  eigen-proxy.h  eigen-runtime.cpp  eigen-runtime.h  eigen-sparse-la.cpp  eigen-sparse-la.h  eigen-sparse.cpp  eigen-sparse.h
eigen3/Eigen/: README
test/: rank.hs  regression.hs  regression1.hs  solve-sparse.hs  solve.hs  solve1.hs  sparse.hs
