name:            eigen
version:         1.0.0
homepage:        http://eigen.tuxfamily.org/
synopsis:        Haskel binding for Eigen library
description:     Eigen is a C++ template library for linear algebra: matrices, vectors, numerical solvers, and related algorithms.
category:        Data
license:         BSD3
license-file:    LICENSE
copyright:       (c) 2013, Oleg Sidorkin
author:          Oleg Sidorkin <oleg.sidorkin@gmail.com>
maintainer:      Oleg Sidorkin <oleg.sidorkin@gmail.com>
cabal-version:   >= 1.6
build-type:      Simple
tested-with:     GHC ==7.4.1

source-repository head
  type:     git
  location: git://github.com/osidorkin/haskell-eigen.git


library
    exposed-modules:    Data.Eigen.LA
                        Data.Eigen.Matrix
                        Data.Eigen.Matrix.Mutable
                        Data.Eigen.Internal
                        Data.Eigen.Parallel

    ghc-options:        -Wall -fno-warn-name-shadowing
    build-depends:      base >= 3 && < 5,
                        vector >= 0.9 && < 0.10

    include-dirs:       eigen3
    c-sources:          eigen-proxy.cpp
    extra-libraries:    stdc++
